unpackaged/main/default/objects/ReferenciaPago__c/ReferenciaPago__c.object-meta.xml
<CustomObject>
    <label>Referencia de pago</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Nombre de Referencia de pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referencias de pago</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>