unpackaged/main/default/objects/ReferenciaPago__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referencias de pago</relationshipLabel>
    <relationshipName>Referencias_de_pago</relationshipName>
    <type>Lookup</type>
</CustomField>