unpackaged/main/default/objects/ReferenciaPago__c/fields/Compania__c.field-meta.xml
<CustomField>
    <fullName>Compania__c</fullName>
    <label>Compañía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>