unpackaged/main/default/objects/ReferenciaPago__c/fields/ConvenioEmpresa__c.field-meta.xml
<CustomField>
    <fullName>ConvenioEmpresa__c</fullName>
    <label>Convenio / Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>