unpackaged/main/default/objects/ReferenciaPago__c/fields/Num_uen__c.field-meta.xml
<CustomField>
    <fullName>Num_uen__c</fullName>
    <label>Num_uen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>