unpackaged/main/default/objects/ReferenciaPago__c/fields/ReferenciaBanorte__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaBanorte__c</fullName>
    <label>Referencia Banorte</label>
    <length>15</length>
    <type>Text</type>
</CustomField>