unpackaged/main/default/objects/ReferenciaPago__c/fields/ReferenciaFamsa__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaFamsa__c</fullName>
    <label>Referencia Famsa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>