unpackaged/main/default/objects/ReferenciaPago__c/fields/ReferenciaSantander__c.field-meta.xml
<CustomField>
    <fullName>ReferenciaSantander__c</fullName>
    <label>Referencia Santander</label>
    <length>15</length>
    <type>Text</type>
</CustomField>