unpackaged/main/default/objects/ReferenciaPago__c/fields/RepresentanteLegal__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteLegal__c</fullName>
    <label>Representante Legal</label>
    <type>TextArea</type>
</CustomField>