unpackaged/main/default/objects/ReferenciaPago__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <label>RFC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>