unpackaged/main/default/objects/ReferenciaPago__c/fields/SPEISantander__c.field-meta.xml
<CustomField>
    <fullName>SPEISantander__c</fullName>
    <label>SPEI Santander</label>
    <length>50</length>
    <type>Text</type>
</CustomField>